--- a/.github/workflows/composition-tests.yaml
+++ b/.github/workflows/composition-tests.yaml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - name: Checkout
         id: checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
       - name: Install up
-        uses: upbound/action-up@v1
+        uses: upbound/action-up@53fe6395637d884c80d2bbc8c2d75d0ece776ced # v1
         with:
           skip-login: true
 
