--- a/upbound.yaml
+++ b/upbound.yaml
@@ -6,7 +6,7 @@ spec:
   dependsOn:
   - configuration: xpkg.upbound.io/upbound/configuration-aws-eks
     # renovate: datasource=github-releases depName=upbound/configuration-aws-eks
-    version: "v0.0.0-1743772301" # @TODO siwtch after release and before merge
+    version: "v0.17.0"
   - function: xpkg.upbound.io/crossplane-contrib/function-auto-ready
     version: '>=v0.0.0'
   license: Apache-2.0
