--- a/upbound.yaml
+++ b/upbound.yaml
@@ -4,14 +4,17 @@ metadata:
   name: configuration-aws-eks-pod-identity
 spec:
   dependsOn:
-  - configuration: xpkg.upbound.io/upbound/configuration-aws-eks
-    # renovate: datasource=github-releases depName=upbound/configuration-aws-eks
-    version: "v0.18.2"
-  - function: xpkg.upbound.io/crossplane-contrib/function-auto-ready
+  - apiVersion: pkg.crossplane.io/v1
+    kind: Configuration
+    package: xpkg.upbound.io/upbound/configuration-aws-eks
+    version: v0.19.0
+  - apiVersion: pkg.crossplane.io/v1
+    kind: Function
+    package: xpkg.upbound.io/crossplane-contrib/function-auto-ready
     version: '>=v0.0.0'
+  description: This configuration manages pod identities on eks clusters
   license: Apache-2.0
   maintainer: Upbound <support@upbound.io>
-  description: This configuration manages pod identities on eks clusters
   readme: |
     This configuration manages pod identities on eks clusters
   repository: xpkg.upbound.io/upbound/configuration-aws-eks-pod-identity
