--- a/upbound.yaml
+++ b/upbound.yaml
@@ -7,6 +7,7 @@ spec:
   - apiVersion: pkg.crossplane.io/v1
     kind: Configuration
     package: xpkg.upbound.io/upbound/configuration-aws-eks
+    # renovate: datasource=github-releases depName=upbound/configuration-aws-eks
     version: v0.19.0
   - apiVersion: pkg.crossplane.io/v1
     kind: Function
