--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,8 +29,8 @@ jobs:
         with:
           api-token: ${{ secrets.UP_API_TOKEN }}
           organization: ${{ secrets.UP_ORG }}
-          channel: main
-          version: v0.39.0-315.geacb58a0
+          channel: alpha
+          version: v0.40.0-0.rc.4
 
       # doesn't work with plain token when pushing otherwise
       - name: Login to xpkg with robot
