--- a/examples/eks-xr.yaml
+++ b/examples/eks-xr.yaml
@@ -1,7 +1,8 @@
 apiVersion: aws.platform.upbound.io/v1alpha1
-kind: XEKS
+kind: EKS
 metadata:
   name: configuration-aws-eks-pod-identity
+  namespace: default
 spec:
   parameters:
     id: configuration-aws-eks-pod-identity
@@ -10,6 +11,3 @@ spec:
     nodes:
       count: 1
       instanceType: t3.small
-  writeConnectionSecretToRef:
-    name: configuration-aws-eks-pod-identity-kcl-kubeconfig
-    namespace: upbound-system
