--- a/examples/podidentity/pod-identity-xr.yaml
+++ b/examples/podidentity/pod-identity-xr.yaml
@@ -1,7 +1,8 @@
 apiVersion: aws.platform.upbound.io/v1alpha1
-kind: XPodIdentity
+kind: PodIdentity
 metadata:
   name: configuration-aws-eks-pod-identity
+  namespace: default
 spec:
   parameters:
     region: us-west-2
